<?xml version="1.0"?>
<resources>

<string name="send_invitation_button">Send an invitation</string>
<string name="send_invitation_button_hint">User is not registred yet.\nYou can send an invitation. </string>    
<string name="sms_invitation_text_format" formatted="false">Hi, I\'m using \'%1$s\' application, join me. https://play.google.com/store/apps/details?id=com.gorecode.vk</string>
    
<string name="friends_tab_title">Friends</string>
<string name="friends_online_tab_title">Online</string>
<string name="friends_contacts_tab_title">Contacts</string>

<string name="pick_location_activity_title">Map</string>
<string name="pick_location_button_text">Share location</string>

<string name="registration_title">New account</string>
<string name="registration_phone_hint">Your Phone Number</string>
<string name="registration_first_name_hint">Your First Name</string>
<string name="registration_last_name_hint">Your Last Name</string>
<string name="registration_button_text">Sign Up</string>
<string name="registration_toast_wait_for_sms">Please wait for SMS with confirmation code to complete registration</string>
<string name="registration_confirmation_code_hint">Confirmation code</string>
<string name="registration_password_hint">Your Password</string>
<string name="complete_registration_button_text">New account</string>
<string name="resend_confirmation_code_button_text">Send SMS again</string>

<string name="tab_button_messages">Messages</string>
<string name="tab_button_friends">Friends</string>
<string name="tab_button_search">Search</string>
<string name="tab_button_settings">Settings</string>

<string name="retry_button_text">Try again</string>

<string name="stop_plackback_dialog_message">Turn off music playback?</string>

<string name="invite_friend_button_text">Invite friend</string>

<string name="dialogs_title">Messages</string>

<string name="popup_item_compose_message">Send message</string>
<string name="popup_item_create_group_chat">Create conversation</string>

<string name="search_hint_default">Search</string>
<string name="search_hint_people">Start type name of person</string>
<string name="search_title">Search</string>
<string name="people_search_hint">Search for your friends and contacts among all registred users</string>

<string name="settings_title">Settings</string>

<string name="login_hint">E-mail or phone</string>
<string name="password_hint">Your password</string>
<string name="login_button_text">Log in</string>
<string name="register_button_text">Sign up</string>
<string name="greeting_text">For fast, free and convenient messaging with friends and contacts</string>
   
<string name="currentFacebookId">374673985887159</string>

<string name="preferences_section_account">Account</string>
<string name="preferences_section_other">Other settings</string>
<string name="preferences_button_text">Open settings screen</string>

<string name="change_profile_photo_button">Change avatar</string>
<string name="logout_button_text">Sign out</string>

<string name="menu_deleteDialog">Delete conversation</string>

<string name="remove_from_friends_button_text">Remove friend</string>
<string name="call_button_text_format" formatted="false">Call %1$s</string>
<string name="send_message_button_text">Send a message</string>
<string name="offer_friendship_button_text">Add friend</string>
<string name="reject_offer_button_text">Decline request</string>
<string name="add_to_friends_button_text">Add friend</string>

<string name="toast_could_not_select_unsent_message">Cannot select message that not sent</string>
<string name="toast_messages_attached">Selected messages are available in all conversations</string>
<string name="toast_friendship_offer_sent">Your friendship request have been sent</string>
<string name="toast_friendship_offers_rejected">All your incoming friendship requests have been declined</string>
<string name="toast_contacts_sync_complete">Your friends are added in your phonebook</string>

<string name="sync_contacts_button_text">Sync contacts</string>
<string name="sync_contacts_hint">Sync your phone contacts with your VK friends list</string>
<string name="sync_state_get_friends">Loading friends</string>
<string name="sync_state_update_contacts">Processing contacts</string>
<string name="sync_state_update_photos">Processing photos</string>
<string name="sync_progress">%1$d of %2$d</string>
<string name="invite_friend_header_text">Invite friend</string>

<string name="list_item_separator_offers">Offers</string>
<string name="list_item_separator_possible_friends">Suggestions</string>
<string name="list_item_separator_friends">Friends</string>
<string name="list_item_separator_all_people">Global search</string>
<string name="list_item_separator_people">People</string>
<string name="list_item_separator_dialogs">Conversations</string>
<string name="list_item_separator_messages">Messages</string>

<string name="attachment_photo">Photo</string>
<string name="attachment_photos">Photos</string>
<string name="attachment_video">Video</string>
<string name="attachment_videos">Videos</string>
<string name="attachment_audio">Audio</string>
<string name="attachment_audios">Audios</string>
<string name="attachment_message">Forwarded message</string>
<string name="attachment_messages">Forwarded messages</string>
<string name="attachment_document">Document</string>
<string name="attachment_documents">Documents</string>
<string name="attachment_location">Map</string>
<string name="attachment_mixed">Attachments</string>

<string name="chat_message_activity_title">Message</string>

<string name="empty_list_messages_search">No messages found</string>
<string name="empty_list_messages">No messages yet</string>
<string name="empty_list_friends">No friends yet</string>
<string name="empty_list_dialogs">No conversations yet</string>
<string name="empty_list_suggestions">Empty</string>
<string name="empty_list_people_search">No people found</string>
<string name="empty_list_contacts">Empty</string>

<string name="application_name">Vk Messages</string>

<string name="loading_text">Loading</string>

<string name="captcha_key_hint">Enter code</string>
<string name="submit_captcha_button_text">Submit code</string>

<string name="change_dialog_title_button_text">Change chat</string>
<string name="dialog_title_hint">Title</string>
<string name="participant_list_is_empty">No participants yes</string>
<string name="add_participant_button_text">Add person</string>
<string name="create_group_chat_button_text">Create conversation</string>
<string name="toast_participants_required">You should add at least one person to conversation</string>

<string name="edit_dialog_action_bar_title_format">%d participants</string>
<string name="create_dialog_action_bar_title">New conversation</string>
<string name="create_dialog_action_bar_button_text">+</string>

<string name="timeFormat_today">today</string>
<string name="timeFormat_yesterday">yesterday</string>
<string name="timeFormat_at">at</string>

<string name="message_uploading_images">Uploading images</string>

<string formatted="false" name="error_registration_invalid_input">Authorization error. Please make sure that you\'ve entered the correct phone or email and password and try again.</string>
<string formatted="false" name="error_registration_confirmation_invalid_input">Authorization error. Please make sure that you\'ve entered the correct phone or email and password and try again.</string>
<string formatted="false" name="error_registration_is_pending">Request for this phone is already processing. Try again after 5 minutes.</string>
<string formatted="false" name="error_phone_taken">Phone is used by another person.</string>
<string formatted="false" name="error_try_later">Request is processing. Try again after 10 seconds.</string>

<string formatted="false" name="error_playing_video">Error playing video.</string>
<string formatted="false" name="error_network_issue">Network error. Check your internet connection.</string>
<string formatted="false" name="error_bad_email_or_password">Authorization error. Please make sure that you\'ve entered the correct phone or email and password and try again.</string>
<string formatted="false" name="error_internal_error">Unknown error.</string>

<string formatted="false" name="notification_default_ticker">New notifications</string>
<string formatted="false" name="notification_title_for_offer_format">Friendship request from %s</string>
<string formatted="false" name="notification_content_text_format">You got %s</string>
<string formatted="false" name="notification_content_text_messages_part_format">%d messages</string>
<string formatted="false" name="notification_content_text_separator">, </string>
<string formatted="false" name="notification_content_text_offers_part_format">%d friendship offers</string>

<string name="cancel">Cancel</string>
<string name="yes">Yes</string>
<string name="no">No</string>

<string name="photo_dialog_from_gallery">Choose existing photo</string>
<string name="photo_dialog_from_camera">Take photo</string>
<string name="photo_dialog_title">Avatar</string>

<string name="login_progress_message">Logging in.</string>

<string name="playback_notification_default_content_title">Music is playing</string>
<string name="playback_notification_default_content_text">Audio</string>

<string name="chat_messages_input_hint">Enter message</string>
<string name="chat_messages_button_send">Send</string>
<string name="chat_messages_button_cancel">Cancel</string>
<string name="chat_messages_button_delete">Delete %d</string>
<string name="chat_messages_button_forward">Forward %d</string>
<string name="chat_last_activity_format" formatted="false">User was online %s</string>
<string name="attach_location_button_text">Share location</string>
<string name="attach_photo_from_gallery_button_text">Choose existing photo</string>
<string name="attach_photo_from_camera_button_text">Take photo</string>

<string name="some_trouble">Error occured.</string>

<string name="chat_activity_for_one_format" formatted="false" >%s is typing</string>
<string name="chat_activity_for_multiply_format" formatted="false" >%s are typing</string>

<string name="retry">Try again</string>

<string name="menu_extended">Extended configuration</string>

<string name="menu_quality_240">240P</string>
<string name="menu_quality_320">320P</string>
<string name="menu_quality_480">480P</string>
<string name="menu_quality_720">720P</string>
<string name="menu_reject_all_offers_title">Decline all offers</string>

<string name="pref_section_push_notifications">Notifications</string>
<string name="pref_push_notifications_enabled">Push notifications</string>
<string name="pref_push_notifications_sound">Sound</string>
<string name="pref_push_notifications_vibration">Vibration</string>

<string name="menuItem_open_chat">Chat</string>
<string name="menuItem_view_message">View Message</string>

</resources>