<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.gorecode.vk.view.LoaderLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/contact_list_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@android:id/list"
            style="@style/listOfUsers"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>

        <TextView
            android:id="@android:id/empty"
            style="@style/emptyListText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/empty_list_contacts" >
        </TextView>
    </com.gorecode.vk.view.LoaderLayout>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/contact_sync_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/contact_sync_offer_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/sync_contacts_button"
                style="@style/blue_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/sync_contacts_button_text" />

            <com.gorecode.vk.view.HelveticaTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/sync_contacts_hint"
                android:textColor="#ff8f9eac"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_sync_progress_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone"
            android:gravity="center"
            android:orientation="vertical" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/grey_progress" />

            <com.gorecode.vk.view.HelveticaTextView
                android:id="@+id/state_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="16.0dip"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/sync_state_get_friends"
                android:textColor="#434f5e"
                android:textSize="17.0sp"
                android:textStyle="bold" />

            <com.gorecode.vk.view.HelveticaTextView
                android:id="@+id/progress_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/sync_progress"
                android:textColor="#434f5e"
                android:textSize="17.0sp" />
        </LinearLayout>
    </FrameLayout>

</merge>