<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vk="http://schemas.android.com/apk/res/com.gorecode.vk"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_light">

    <com.gorecode.vk.view.VkActionBar
        android:id="@id/actionBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        vk:backButton_visible="true" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/photo"
            android:layout_width="67dip"
            android:layout_height="67dip"
            android:layout_marginBottom="18dip"
            android:layout_marginTop="18dip"
            android:background="@drawable/photo_placeholder"
            android:scaleType="centerInside"
            android:src="@drawable/photo_placeholder1" />

        <Button
            android:id="@+id/send_invitation_button"
            style="@style/blue_user_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_invitation_button" />

        <com.gorecode.vk.view.TextViewCustomFont
            android:layout_marginBottom="18dip"
            android:layout_marginTop="18dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#445466"
            android:text="@string/send_invitation_button_hint"
            vk:typeface="helvetica.ttf"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/call_button"
            style="@style/blue_user_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_button_text_format" />
    </LinearLayout>

</LinearLayout>