<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_light"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="8.0dip"
        android:paddingLeft="8.0dip"
        android:paddingRight="8.0dip"
        android:paddingTop="8.0dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16.0dip"
            android:layout_marginTop="8.0dip"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/login"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:layout_weight="1"
                android:background="@drawable/input_loginr"
                android:hint="@string/login_hint"
                android:paddingBottom="15dip"
                android:paddingLeft="12.0dip"
                android:singleLine="true" >
                <requestFocus />
            </EditText>

            <ImageView
                android:id="@+id/phone_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:maxHeight="37dip"
                android:maxWidth="37dip"
                android:paddingBottom="3.0dip"
                android:src="@drawable/phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/password_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="3.0dip"
                android:src="@drawable/pass" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30.0dip"
                android:background="@drawable/input_loginl"
                android:hint="@string/password_hint"
                android:password="true"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/blue_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32.0dip"
            android:layout_marginRight="31.0dip"
            android:text="@string/login_button_text"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registration_button"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.5"
        android:background="@drawable/registration_bg_selector"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:shadowColor="#ffffffff"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/register_button_text"
            android:textColor="@color/signup_text_1"
            android:textSize="22.0sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:duplicateParentState="true"
            android:gravity="center"
            android:paddingTop="15.0dip"
            android:shadowColor="#ffffffff"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/greeting_text"
            android:textColor="@color/signup_text_1" />
    </LinearLayout>

</LinearLayout>